fix(component): card news tag image on safari

--- a/components/cards/_card.css
+++ b/components/cards/_card.css
@@ -38,7 +38,6 @@
 
   &__thumb {
     width: 100%;
-    height: 200px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -58,10 +57,6 @@
         transition: transform .3s;
         background: inherit;
       }
-    }
-
-    &--full-height {
-      height: 100%;
     }
   }
 
